--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-requests
-openai
-python-dotenv
-groq
+fastapi==0.114.1
+groq==0.11.0
+openai==1.45.0
+python-dotenv==1.0.1
+Requests==2.32.3
+uvicorn==0.30.6
